<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Main / General / Splash Screen-->

    <string name="main_screen">Social Networking</string>
    <string name="player_info">Player Information</string>
    <string name="player_list">Player List</string>
    <string name="game_list">Add Game</string>
    <string name="view_game_list">Game List</string>
    <string name="action_settings">Settings</string>
    <string name="splash_screen_btnAddPlayer">Add Player</string>
    <string name="splash_screen_btnViewPlayer">View Players</string>
    <string name="splash_screen_btnGameList">Add Game</string>
    <string name="splash_screen_btnPublisher">Publisher</string>
    <string name="splash_screen_btnDeveloper">Developer</string>
    <string name="splash_screen_btnGenre">Genre</string>

    <!--Player Screen-->

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btnAddPlayer">Add</string>
    <string name="btnViewPlayer">View</string>
    <string name="onlyLetter">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="onlyLetterWithSpace">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="onlyNumber">0123456789</string>
    <string name="onlyLetterAndNumber">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>


    <!--Add Game List Screen-->
    <string name="gameName">Name</string>
    <string name="gameDescription">Description</string>
    <string name="publisherID">Publisher ID</string>
    <string name="developerID">Developer ID</string>
    <string name="genreID">Genre ID</string>
    <string name="btnAddGame">Add Game</string>
    <string name="btnViewGame">View Game</string>

    <!--Hint for add game screen-->

    <string name="hintGameName">Name of the game</string>
    <string name="hintGameDescription">Description of the game</string>
    <string name="hintPublisherID">Enter publisher ID(number)</string>
    <string name="hintDeveloperID">Enter developer ID(number)</string>
    <string name="hintGenreID">Enter genre ID(number)</string>

</resources>
