<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first_name"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstName"
        android:layout_margin="5dp"
        android:digits="@string/onlyLetter"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/last_name"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/lastName"
        android:layout_margin="5dp"
        android:digits="@string/onlyLetter"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/username"
        android:layout_margin="5dp"
        android:digits="@string/onlyLetter"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/password"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        android:digits="@string/onlyLetterAndNumber"
        android:singleLine="true" />

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAddPlayer"
            android:id="@+id/btnAddPlayer"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textStyle="bold" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnViewPlayer"
            android:id="@+id/splash_screen_btnViewPlayer"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textStyle="bold" />
    </TableRow>

</LinearLayout>